crates/ink/tests/ui/blake2b/fail/invalid_parameter_type_01.rs
const _: [u8; 32] = ink::blake2x256!(true);

fn main() {}
