crates/ink/tests/ui/blake2b/fail/invalid_parameter_type_01.stderr
error: expected string or byte string literal as input. found Bool(LitBool { value: true })
 --> tests/ui/blake2b/fail/invalid_parameter_type_01.rs:1:38
  |
1 | const _: [u8; 32] = ink::blake2x256!(true);
  |                                      ^^^^
